# scheduling.py
@@ -1,5 +1,4 @@
 from flask import abort, make_response
-import json
 from config import db
 from models import Scheduling, scheduling_schema, schedulings_schema, Student, students_schema
 
@@ -10,8 +9,17 @@ def create_schedule(scheduling_data):
     if not students:
         abort(404, f"No students found in city {city}")
 
-    student_list = students_schema.dump(students)
-    scheduling_data['studentlist'] = json.dumps(student_list)  # Serialize the list of students
+    # Extract student details and format them with a newline after each student
+    student_list = '\n'.join(
+        f"{student.fname} {student.lname} {student.regNo} {student.program} {student.company} {student.com_phone};"
+        for student in students
+    )
+
+    # Count the number of students and append it to the student list
+    student_count = len(students)
+    student_list += f"\n\nTotal Students: {student_count}"
+
+    scheduling_data['studentlist'] = student_list  # No need to serialize as JSON
 
     new_schedule = scheduling_schema.load(scheduling_data, session=db.session)
     db.session.add(new_schedule)
@@ -28,5 +36,15 @@ def read_one_schedule(schedule_id):
 
     if schedule is not None:
         return scheduling_schema.dump(schedule)
+    else:
+        abort(404, f"Schedule with ID {schedule_id} not found")
+
+def delete_schedule(schedule_id):
+    schedule = Scheduling.query.get(schedule_id)
+
+    if schedule is not None:
+        db.session.delete(schedule)
+        db.session.commit()
+        return make_response(f"Schedule {schedule_id} successfully deleted", 204)
     else:
         abort(404, f"Schedule with ID {schedule_id} not found")
